--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Excellence and Community Development"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
@@ -51,11 +51,7 @@
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
                 <!-- Core theme JS-->
                 <script src="%PUBLIC_URL%/js/scripts.js"></script>
-                <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-                <!-- * * *                            SB Forms JS                               * *-->
-                <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-                <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-                <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+               
   </body>
 </html>
 
